# ring_test

./: CMakeLists.txt
src/: CMakeLists.txt
src/Apps/: CMakeLists.txt
src/Apps/sources/: unitt_float.cpp
src/RingComms/: CMakeLists.txt
src/RingComms/includes/: RingComms.hpp
src/RingComms/sources/: RingComms.cpp
