project(RingComms)

file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/sources/*.cpp)
file(GLOB_RECURSE INC_FILES ${CMAKE_CURRENT_LIST_DIR}/includes/*.hpp)
set(HEADER_DIR ${CMAKE_CURRENT_LIST_DIR}/includes)

add_library(${PROJECT_NAME} ${LIBRARY_TYPE} ${SRC_FILES} ${INC_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC ${HEADER_DIR})
target_link_libraries(${PROJECT_NAME} PUBLIC MPI::MPI_CXX)

set_target_properties(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
set(${PROJECT_NAME}_INCLUDE_DIRS ${HEADER_DIR} CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)